# hsr-scanner-web

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
backend/: main.py
backend/models/requests/: static_files_request.py
backend/routers/: static_file.py
docker/: docker-compose.yml
frontend/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/sign-in/[[...sign-in]]/: page.tsx
frontend/app/(main)/hsr-scanner/install/: page.tsx
frontend/app/(main)/public/hsr-scanner-template/templates/: page.tsx
frontend/app/(main)/public/hsr-scanner-template/update-log/: page.tsx
frontend/app/(main)/public/hsr-scanner/install/: page.tsx
frontend/app/(main)/public/hsr-scanner/instruction/: page.tsx
frontend/app/(main)/public/hsr-scanner/update-log/: page.tsx
frontend/app/api/templates/: route.ts
frontend/app/api/templates/like/: route.ts
frontend/components/: app-sidebar.tsx  create-template-button.tsx  custom-typewrite.tsx  google-adsence.tsx  header.tsx  node-toggle.tsx  template-code.tsx  template-delete-button.tsx
frontend/components/modals/: create-template-modal.tsx
frontend/components/providers/: modal-provider.tsx
frontend/components/template/: template-delete-button.tsx  template-like-button.tsx
frontend/hooks/: use-modal.ts
frontend/lib/: current-profile.ts  db.ts
frontend/prisma/: schema.prisma
frontend/public/: ads.txt
scripts/: checksum_to_json.sh
(+3 files in other folders)
