[tool.poetry]
name = "hsr-scanner-web"
version = "0.1.0"
description = ""
authors = ["muma <wgr5600133@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
gunicorn = {extras = ["standard"], version = "^23.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
